格式转换任务